--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     		<ul>
         		<li><a href="/">Home</a></li>
 	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">Books For Sale</a></li>
-        		<li><a href="/blog">Contact us!</a></li>
+        		<li><a href="/books">Books For Sale</a></li>
+        		<li><a href="/contact">Contact us!</a></li>
     		</ul>
 		</nav>
 		<div class="container">
