--- a/books.html
+++ b/books.html
@@ -9,14 +9,14 @@
     		<ul>
         		<li><a href="/index.hml">Home</a></li>
 	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">Books for sale!</a></li>
-        		<li><a href="/blog">Contact us!</a></li>
+        		<li><a href="/books">Books for sale!</a></li>
+        		<li><a href="/contact">Contact us!</a></li>
     		</ul>
 		</nav>
 		<div class="container">
     		<div class="blurb">
     		<ul>
-        		<li><p>Contract Law and Theory by Scott and Kraus (ISBN:9780769848945)  $75.99</p></li>
+        		<li> <img src="contractlaw.jpg" alt="Girl in a jacket">  <p>Contract Law and Theory by Scott and Kraus (ISBN:9780769848945)  $75.99</p></li>
 			</ul>
 
 </div><!-- /.blurb -->
