--- a/books.html
+++ b/books.html
@@ -15,8 +15,9 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
+			<img src="/images/contractlaw.jpg" alt="Contract Law and Theory by Scott and Kraus">
     		<ul>
-        		<li> <img src="contractlaw.jpg" alt="Girl in a jacket">  <p>Contract Law and Theory by Scott and Kraus (ISBN:9780769848945)  $75.99</p></li>
+        		<li>   <p>Contract Law and Theory by Scott and Kraus (ISBN:9780769848945)  $75.99</p></li>
 			</ul>
 
 </div><!-- /.blurb -->
