--- a/books.html
+++ b/books.html
@@ -15,7 +15,7 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-			<img src="/images/contractlaw.jpg" alt="Contract Law and Theory by Scott and Kraus">
+			<img src="/contractlaw.jpg" alt="Contract Law and Theory by Scott and Kraus">
     		<ul>
         		<li>   <p>Contract Law and Theory by Scott and Kraus (ISBN:9780769848945)  $75.99</p></li>
 			</ul>
