--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     		<div class="blurb">
         		<h1>Hi there, we are Law Books US ^_^ </h1>
 				<p>We sell New or barely used Law Books for a lower price than leading online stores such as Amazon.com or Textbooksrus.com, directly from Law students that end a class or swap classes.</p>
-    		<h2>Books available:</h2>
+    		<h2>Books available: (More books will be added soon, thanks for the patience!)</h2>
 			<ul>
         		<li><p>Contract Law and Theory by Scott and Kraus (ISBN:9780769848945)  $75.99</p></li>
 </ul>
