--- a/books.html
+++ b/books.html
@@ -7,7 +7,7 @@
 	<body>
 		<nav>
     		<ul>
-        		<li><a href="/index.hml">Home</a></li>
+        		<li><a href="/">Home</a></li>
         		<li><a href="/books">Books for sale!</a></li>
         		<li><a href="/contact">Contact us!</a></li>
     		</ul>
